--- a/resultados.html
+++ b/resultados.html
@@ -74,7 +74,7 @@
                 <input type="text" id="filtro-nombre" placeholder="Buscar alumno...">
             </div>
             <div class="botones-exportar">
-                <button id="descargar-pdf-btn" class="pdf-button"><i class="fas fa-file-pdf"></i> PDF PRO</button>
+                <button id="descargar-pdf-btn" class="pdf-button"><i class="fas fa-file-pdf"></i> REPORTE GENERAL</button>
                 <button id="descargar-general-csv-btn" class="csv-button"><i class="fas fa-file-csv"></i> CSV</button>
             </div>
         </div>
