--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </a>
         
         <div class="desktop-menu">
-            <button class="user-btn" onclick="location.href='resultados.html'">
-                <i class="fas fa-chart-bar"></i> Mis Resultados
+            <button id="btn-admin-desktop" class="user-btn" onclick="location.href='resultados.html'" style="display: none;">
+                <i class="fas fa-chart-pie"></i> Panel Admin
             </button>
             <button class="user-btn" onclick="logout()" style="background:#b22222; border-color:#b22222;">
                 <i class="fas fa-sign-out-alt"></i> Salir
@@ -44,7 +44,8 @@
             <img src="logo.png" width="80" style="margin-bottom:10px;">
             <h3 style="color:white; font-family:'Teko'; margin:0;">MENÚ</h3>
         </div>
-        <a href="resultados.html"><i class="fas fa-chart-bar"></i> Mis Resultados</a>
+        <a href="resultados.html" id="btn-admin-mobile" style="display: none;"><i class="fas fa-chart-pie"></i> Panel Admin</a>
+        
         <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a>
     </div>
     <div class="overlay" id="overlay"></div>
@@ -75,8 +76,8 @@
 
     <script src="JS/script-home.js"></script>
     <script>
-        // Init Menú Móvil
         document.addEventListener('DOMContentLoaded', () => {
+            // Lógica Menú
             const btn = document.getElementById('hamburger-btn');
             const nav = document.getElementById('side-nav');
             const close = document.getElementById('close-nav-btn');
@@ -86,6 +87,16 @@
             const closeMenu = () => { nav.classList.remove('open'); overlay.style.display = "none"; };
             if(close) close.onclick = closeMenu;
             if(overlay) overlay.onclick = closeMenu;
+
+            // --- LÓGICA DE ROLES (OCULTAR/MOSTRAR BOTÓN) ---
+            const user = getUserInfo(); // Función de auth.js
+            if (user && user.rol === 'admin') {
+                // Si es admin, mostramos los botones
+                const btnDesk = document.getElementById('btn-admin-desktop');
+                const btnMob = document.getElementById('btn-admin-mobile');
+                if(btnDesk) btnDesk.style.display = 'flex'; // Flex para alinear ícono
+                if(btnMob) btnMob.style.display = 'block';
+            }
         });
     </script>
 </body>
