--- a/resultados.html
+++ b/resultados.html
@@ -30,7 +30,16 @@
             <button class="user-btn" onclick="location.href='index.html'"><i class="fas fa-home"></i> Simuladores</button>
             <button class="user-btn" onclick="logout()" style="background:#b22222; border-color:#b22222;"><i class="fas fa-sign-out-alt"></i> Salir</button>
         </div>
+        <button class="mobile-toggle" id="hamburger-btn"><i class="fas fa-bars"></i></button>
     </header>
+
+    <div class="side-nav" id="side-nav">
+        <button class="close-nav-btn" id="close-nav-btn">&times;</button>
+        <div style="text-align:center; padding:20px;"><img src="logo.png" width="80"><h3 style="color:white; font-family:'Teko';">ADMIN</h3></div>
+        <a href="index.html"><i class="fas fa-home"></i> Simuladores</a>
+        <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a>
+    </div>
+    <div class="overlay" id="overlay"></div>
 
     <main class="resultados-main">
         <h1>REPORTE DE INTENTOS</h1>
@@ -43,13 +52,22 @@
                 <button id="descargar-general-csv-btn" class="csv-button"><i class="fas fa-file-csv"></i> CSV</button>
             </div>
         </div>
-        <div id="loading-spinner" style="text-align:center; margin-top:30px;">
-            <i class="fas fa-spinner fa-spin" style="font-size:2rem; color:#b22222;"></i><p>Cargando datos...</p>
-        </div>
+        <div id="loading-spinner" style="text-align:center; margin-top:30px;"><i class="fas fa-spinner fa-spin" style="font-size:2rem; color:#b22222;"></i><p>Cargando datos...</p></div>
         <div id="reporte-container"></div>
     </main>
 
     <div style="position: absolute; left: -9999px;"><canvas id="hidden-chart-canvas" width="800" height="400"></canvas></div>
     <script src="JS/script-resultados.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const btn = document.getElementById('hamburger-btn');
+            const nav = document.getElementById('side-nav');
+            const close = document.getElementById('close-nav-btn');
+            const overlay = document.getElementById('overlay');
+            if(btn) btn.onclick = () => { nav.style.width = "280px"; overlay.style.display = "block"; };
+            if(close) close.onclick = () => { nav.style.width = "0"; overlay.style.display = "none"; };
+            if(overlay) overlay.onclick = () => { nav.style.width = "0"; overlay.style.display = "none"; };
+        });
+    </script>
 </body>
 </html>
