--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sparta Academy - Inicio</title>
+    <title>Sparta - Inicio</title>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
     
     <link rel="stylesheet" href="CSS/style-home.css">
@@ -19,7 +19,7 @@
         <a href="index.html" class="header-main-link">
             <div class="header-logo"><img src="logo.png" alt="Logo"></div>
             <div class="header-titulo">
-                <h1>SPARTA ACADEMY</h1>
+                <h1>SPARTA</h1>
                 <h2 id="user-display">PLATAFORMA</h2>
             </div>
         </a>
@@ -69,7 +69,7 @@
     </main>
 
     <footer>
-        <p><strong>SPARTA ACADEMY</strong></p>
+        <p><strong>SPARTA</strong></p>
         <p>Dir: Calle Bolívar entre Boyacá y Junín | Tulcán - Ecuador</p>
         <p>Contacto: 0989746618 / 0984541920</p>
     </footer>
@@ -101,3 +101,4 @@
     </script>
 </body>
 </html>
+
