--- a/simulador.html
+++ b/simulador.html
@@ -18,7 +18,7 @@
         <a href="index.html" class="header-main-link">
             <div class="header-logo"><img src="logo.png" alt="Logo"></div>
             <div class="header-titulo">
-                <h1>SPARTA ACADEMY</h1>
+                <h1>SPARTA</h1>
                 <h2 id="header-subtitulo">SIMULADOR</h2>
             </div>
         </a>
@@ -154,3 +154,4 @@
     </script>
 </body>
 </html>
+
