--- a/resultados.html
+++ b/resultados.html
@@ -24,7 +24,7 @@
     <header>
         <a href="index.html" class="header-main-link">
             <div class="header-logo"><img src="logo.png" alt="Logo"></div>
-            <div class="header-titulo"><h1>SPARTA ACADEMY</h1><h2>ADMINISTRACIÓN</h2></div>
+            <div class="header-titulo"><h1>SPARTA</h1><h2>ADMINISTRACIÓN</h2></div>
         </a>
         <div class="desktop-menu">
             <button class="user-btn" onclick="location.href='index.html'"><i class="fas fa-home"></i> Simuladores</button>
