--- a/index.html
+++ b/index.html
@@ -13,6 +13,50 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="JS/auth.js"></script>
     <script> checkAuth(); </script>
+
+    <style>
+        /* Contenedor flotante de los botones */
+        .admin-controls-overlay {
+            position: absolute !important;
+            top: 8px !important;
+            right: 8px !important;
+            display: flex !important;
+            gap: 5px !important;
+            background: rgba(255, 255, 255, 0.95) !important;
+            padding: 5px !important;
+            border-radius: 8px !important;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.15) !important;
+            z-index: 100 !important;
+            border: 1px solid #ddd !important;
+            backdrop-filter: blur(4px);
+        }
+
+        /* Botones Pequeños Blindados */
+        .mini-btn {
+            width: 34px !important;
+            height: 34px !important;
+            min-width: 0 !important; /* Evita que se estiren */
+            padding: 0 !important;
+            margin: 0 !important;
+            display: flex !important;
+            justify-content: center !important;
+            align-items: center !important;
+            border: none !important;
+            border-radius: 6px !important;
+            cursor: pointer !important;
+            transition: all 0.2s ease !important;
+            color: white !important;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2) !important;
+        }
+
+        .mini-btn:hover { transform: translateY(-2px) !important; filter: brightness(1.1); }
+        .mini-btn i { font-size: 14px !important; margin: 0 !important; pointer-events: none; }
+
+        /* Colores Tácticos */
+        .btn-move { background: #2980b9 !important; } /* Azul */
+        .btn-edit { background: #f39c12 !important; } /* Naranja */
+        .btn-del  { background: #c0392b !important; } /* Rojo */
+    </style>
 </head>
 <body>
     <header>
@@ -78,7 +122,7 @@
 
     <div id="editor-modal" class="modal-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:2000; align-items:center; justify-content:center;">
         <div class="modal-box" style="background:white; padding:30px; border-radius:10px; max-width:400px; width:90%; text-align:left; border-top: 5px solid #d32f2f;">
-            <h3 style="font-family:'Teko'; font-size:2rem; margin-top:0;">EDITAR ELEMENTO</h3>
+            <h3 style="font-family:'Teko'; font-size:2rem; margin-top:0;">RENOMBRAR CARPETA</h3>
             <label style="font-weight:bold;">Nombre:</label>
             <input type="text" id="edit-nombre" style="width:100%; padding:10px; margin-bottom:15px; border:1px solid #ccc;">
             <label style="font-weight:bold;">Descripción:</label>
@@ -134,7 +178,7 @@
                 
                 if(btnDesk) btnDesk.style.display = 'flex';
                 if(btnMob) btnMob.style.display = 'block';
-                if(adminTools) adminTools.style.display = 'flex'; // Mostrar herramientas de edición
+                if(adminTools) adminTools.style.display = 'flex';
             }
         });
     </script>
