--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script> checkAuth(); </script>
 
     <style>
-        /* Contenedor flotante de los botones (Tarjetas) */
+        /* --- ESTILOS BASE DE BOTONES ADMIN (Los que ya tenías y te gustaban) --- */
         .admin-controls-overlay {
             position: absolute !important;
             top: 5px !important;
@@ -31,7 +31,6 @@
             backdrop-filter: blur(2px);
         }
 
-        /* Botones Pequeños Blindados */
         .mini-btn {
             width: 32px !important;
             height: 32px !important;
@@ -52,10 +51,65 @@
         .mini-btn:hover { transform: scale(1.1) !important; filter: brightness(1.1); }
         .mini-btn i { font-size: 14px !important; margin: 0 !important; pointer-events: none; }
 
-        /* Colores Tácticos */
-        .btn-move { background: #2980b9 !important; } /* Azul */
-        .btn-edit { background: #f39c12 !important; } /* Naranja */
-        .btn-del  { background: #c0392b !important; } /* Rojo */
+        .btn-move { background: #2980b9 !important; }
+        .btn-edit { background: #f39c12 !important; }
+        .btn-del  { background: #c0392b !important; }
+
+        /* --- CORRECCIÓN RESPONSIVE DE EMERGENCIA (NUEVO) --- */
+        /* Esto fuerza a que nada se salga de la pantalla en móviles */
+        html, body {
+            overflow-x: hidden !important; 
+            width: 100% !important;
+            margin: 0 !important; padding: 0 !important;
+        }
+        * {
+            box-sizing: border-box !important;
+            max-width: 100vw !important; /* Límite absoluto de ancho */
+        }
+
+        @media screen and (max-width: 768px) {
+            /* 1. Ajuste de Header */
+            header { padding: 0 10px !important; }
+            .header-left img { height: 40px !important; }
+            .header-titulo h1 { font-size: 1.4rem !important; margin-left: 5px !important;}
+            .header-titulo h2 { font-size: 0.6rem !important; margin-left: 5px !important;}
+            
+            /* 2. Contenedor Principal */
+            .seleccion-container { padding: 15px !important; width: 100% !important; }
+
+            /* 3. Forzar texto a bajar de línea (Wrap) */
+            #section-title, .materia-card h3 {
+                white-space: normal !important;
+                word-wrap: break-word !important;
+                overflow-wrap: break-word !important;
+                font-size: 1.3rem !important;
+                line-height: 1.2 !important;
+            }
+            .materia-card h3 { font-size: 1.1rem !important; }
+
+            /* 4. Tarjetas en columna */
+            #dynamic-grid {
+                display: flex !important;
+                flex-direction: column !important;
+            }
+            .materia-card, .card-wide {
+                width: 100% !important;
+                margin-bottom: 15px !important;
+            }
+
+            /* 5. ARREGLO BOTONES: Se acomodan en bloque si no caben */
+            .admin-controls-overlay {
+                flex-wrap: wrap !important;
+                justify-content: flex-end !important;
+                max-width: 80px !important; /* Fuerza el wrap si es muy ancho */
+                right: 5px !important;
+                top: 5px !important;
+            }
+            .mini-btn {
+                width: 28px !important; /* Un poco más chicos en móvil */
+                height: 28px !important;
+            }
+        }
     </style>
 </head>
 <body>
@@ -181,14 +235,10 @@
             if(close) close.onclick = closeMenu;
             if(overlay) overlay.onclick = closeMenu;
 
-            // Lógica de visibilidad de Admin (Móvil y Desktop)
             const user = getUserInfo(); 
             if (user && user.rol === 'admin') {
-                // Desktop
                 document.getElementById('btn-admin-desktop').style.display = 'flex';
                 document.getElementById('admin-tools-desktop').style.display = 'flex';
-                
-                // Móvil
                 document.getElementById('btn-admin-mobile').style.display = 'block';
                 document.getElementById('admin-tools-mobile').style.display = 'flex';
             }
