--- a/creador.html
+++ b/creador.html
@@ -55,6 +55,23 @@
         .sparta-alert-msg { color: #666; font-size: 1.1rem; margin: 15px 0 25px 0; }
         .sparta-btn-ok { background: #2c3e50; color: white; border: none; padding: 12px 30px; border-radius: 50px; font-family: 'Teko', sans-serif; font-size: 1.3rem; cursor: pointer; width: 100%; margin-top: 20px; }
         .sparta-btn-ok:hover { transform: scale(1.05); background: #D32F2F; }
+
+        /* --- CORRECCIÓN RESPONSIVE DE EMERGENCIA --- */
+        html, body { overflow-x: hidden !important; width: 100% !important; margin: 0 !important; padding: 0 !important; }
+        * { box-sizing: border-box !important; max-width: 100vw !important; }
+
+        @media screen and (max-width: 768px) {
+            header { padding: 0 10px !important; }
+            .header-left img { height: 40px !important; }
+            .header-titulo h1 { font-size: 1.4rem !important; margin-left: 5px !important;}
+            .header-titulo h2 { font-size: 0.6rem !important; margin-left: 5px !important;}
+            .main-container { padding: 15px !important; width: 100% !important; }
+            .page-title { white-space: normal !important; word-wrap: break-word !important; font-size: 1.8rem !important; }
+            .form-grid { display: flex !important; flex-direction: column !important; }
+            .panel { padding: 15px !important; }
+            .actions-bar { width: 90% !important; padding: 10px !important; gap: 10px !important; }
+            .btn-action { font-size: 1rem !important; padding: 10px 15px !important; }
+        }
     </style>
 </head>
 <body>
@@ -147,12 +164,9 @@
     // --- MAGIA: ARREGLAR DRIVE PARA QUE SE VEA SIEMPRE ---
     function fixDriveLink(url) {
         if (!url) return "";
-        // Convierte link de vista previa (/view) en link de imagen directa (/thumbnail)
         if (url.includes("drive.google.com") && url.includes("/view")) {
-            // Extrae el ID que está entre /d/ y /view
             const match = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
             if (match && match[1]) {
-                // sz=w4000 pide la imagen en alta calidad
                 return `https://drive.google.com/thumbnail?id=${match[1]}&sz=w4000`; 
             }
         }
@@ -300,7 +314,6 @@
                 const ans = card.querySelector('.q-ans').value.trim();
                 const opts = card.querySelector('.q-opts').value;
                 
-                // GUARDAMOS EL ENLACE CORREGIDO DIRECTAMENTE
                 let urlInput = card.querySelector('.q-img-url').value.trim();
                 urlInput = fixDriveLink(urlInput); 
 
