--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="CSS/style-login.css">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <div class="login-container">
@@ -26,7 +28,7 @@
                     <i class="fas fa-eye" id="togglePassword"></i>
                 </div>
             </div>
-            <button type="submit" class="login-button">Iniciar Sesión</button>
+            <button type="submit" class="login-button" id="btn-ingresar">Iniciar Sesión</button>
             <p id="error-mensaje" class="error-mensaje"></p>
         </form>
     </div>
