--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script> checkAuth(); </script>
 
     <style>
-        /* ESTILOS DE LOS BOTONES DE EDICIÓN */
+        /* ESTILOS BOTONES ADMIN */
         .admin-controls-overlay {
             position: absolute !important; top: 5px !important; right: 5px !important;
             display: flex !important; gap: 4px !important;
@@ -35,7 +35,7 @@
         .btn-edit { background: #f39c12 !important; }
         .btn-del  { background: #c0392b !important; }
 
-        /* CORRECCIONES RESPONSIVE */
+        /* RESPONSIVE */
         @media screen and (max-width: 768px) {
             html, body { overflow-x: hidden !important; width: 100% !important; margin: 0; padding: 0; }
             * { box-sizing: border-box !important; }
@@ -162,6 +162,16 @@
                 <button onclick="document.getElementById('nuevo-modal').style.display='none'" style="padding:10px 20px; border:none; background:#777; color:white; cursor:pointer;">Cancelar</button>
                 <button onclick="crearElemento()" style="padding:10px 20px; border:none; background:#27ae60; color:white; cursor:pointer;">Crear</button>
             </div>
+        </div>
+    </div>
+
+    <div id="denied-modal" class="modal-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); z-index:3000; align-items:center; justify-content:center; backdrop-filter: blur(5px);">
+        <div class="modal-box" style="background:white; padding:30px; border-radius:12px; max-width:400px; width:85%; text-align:center; border-top: 6px solid #c0392b; box-shadow: 0 10px 40px rgba(192, 57, 43, 0.4);">
+            <i class="fas fa-lock" style="font-size: 4rem; color: #c0392b; margin-bottom: 20px;"></i>
+            <h2 style="font-family:'Teko'; font-size:2.5rem; margin:0; color:#333; line-height:1;">ACCESO DENEGADO</h2>
+            <p style="color:#666; font-size:1.1rem; margin:15px 0;">No tienes permisos para acceder a esta carpeta.</p>
+            <p style="font-size:0.9rem; color:#888;">Si crees que es un error, contacta a la administración.</p>
+            <button onclick="document.getElementById('denied-modal').style.display='none'" style="background:#333; color:white; border:none; padding:12px 30px; border-radius:50px; font-weight:bold; cursor:pointer; margin-top:20px; width:100%;">ENTENDIDO</button>
         </div>
     </div>
 
